# moveit1_interface

./: .gitignore  README.md  check_ros1_env.sh  check_sys_env.sh  config.sh  config_basic.sh  gazebo_config.sh  setup.sh  update.sh
src/: setup.py
src/airbot_play_follow_basic/: CMakeLists.txt  package.xml  setup.py
src/airbot_play_follow_basic/airbot_play_ik_service/: airbot_play_ik_server.py
src/airbot_play_follow_basic/examples/: basic_control.py  position_control.py  raw_control.py
src/airbot_play_follow_basic/moveit_basic_controller/: __init__.py  moveit_basic_controller.py
src/airbot_play_follow_basic/scripts/: airbot_twins_control.py  fake_arm.py  follow_joint_trajectory_server_basic.py  gripper_control.py  ik_control_server.py  ros_agent.py
src/airbot_play_launch/: CMakeLists.txt  airbot_play_demo.launch  airbot_play_gazebo.launch  airbot_play_moveit.launch  display_urdf.launch  package.xml  static_transform_publisher.launch
src/gazebo/airbot_demos/: homework2.py
src/gazebo/airbot_worlds/: desk_sky.world  desk_sky_box.world  desk_sky_box_1cube.world
src/moveit_configs/airbot_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_configs/airbot_play_compatible_config/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_configs/airbot_play_config/: .setup_assistant  package.xml  (+1 more)
src/moveit_configs/airbot_play_v2_1_twins_v1_config/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_configs/airbot_play_v2_1_twins_v1_config/config/: airbot_play_v2_1_twins_v1.srdf  fake_controllers.yaml  gazebo_airbot_play_v2_1_twins_v1.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/moveit_configs/airbot_play_v2_1_twins_v1_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/urdfs/airbot_play_inspire_eg2_4c_v2_gazebo/: CMakeLists.txt  package.xml
src/urdfs/airbot_play_inspire_eg2_4c_v2_gazebo/config/: joint_names_airbot_play_inspire_eg2_4c_v2_gazebo.yaml
src/urdfs/airbot_play_inspire_eg2_4c_v2_gazebo/launch/: display.launch  gazebo.launch
src/urdfs/airbot_play_inspire_eg2_4c_v2_gazebo/meshes/: base_link.STL  link1.STL  link4.STL  link5.STL
src/urdfs/airbot_play_inspire_eg2_4c_v2_gazebo/urdf/: airbot_play_inspire_eg2_4c_v2_gazebo.urdf
(+541 files in other folders)
